# Dynamic-Resolution-Lattice-Theory-

./: .gitignore  AUDIT_GUIDE.md  BRANCH_MERGE_GUIDE.md  CAPSTONE_INDEX.md  CLAUDE.md  DEGREES_OF_FREEDOM_LEDGER.md  Doubly_Irreducible.md  HANDOFF.md  HANDOFF_archive.md  LEAN_FILE_SUMMARY.md  LESSONS_LEARNED.md  LICENSE  LICENSE-DOCS  OPEN_QUESTIONS.md  PRE_REGISTRATION.md  PROCESS.md  Prompt.md  README.md  REVIEW_REPORT.md  RH_CORRECTION.md  STRICT_ZERO_AXIOM.md  VERIFICATION_SPINE.md  ch01 whyC.tex  ch02 whyd5.tex  ch03 geometry.tex  ch04 hbar.tex  ch05 couplings.tex  ch06 masses.tex  ch07 mixing.tex  ch08 ghosts.tex  ch09 cosmology.tex  ch10 block.tex  doubly_irreducible.md  drIt_axioms_lemmas_theorems.md  drlt book main.tex  mobius_randomness.md  prime.md  rh_exploration 2.md  rh_exploration.md  two_boundaries_theorem.md  (+1 more)
.claude/: settings.json
.refactor-baseline/: file-count-before.txt  layer-audit-before.txt
213/: 213.md  ARCHITECTURE.md  AUDIT_Lean.md  AXIOM.md  BOOK_213.md  BOOK_REVIEW.md  CLAUDE.md  CLEAN_PRIMITIVE.md  CORE.md  FORMAL_SIMPLEX.md  FOUNDATION_POSITION.md  FRACTAL_TOWER.md  HOW_TO_213.md  IMPLEMENTATION.md  METHOD.md  NOTATION.md  NOVELTY_REVISED.md  NS_PROOF_CHAIN.md  NS_RICCATI_DERIVATION.md  PAPER.md  PAPER1.md  PAPER1_OUTLINE.md  PAPER2.md  PIVOT_ANALYSIS.md  PNP_STANDARD.md  README.md  RESEARCH.md  RESEARCH_VISION.md  THESIS.md  THESIS_REVIEW.md  TILING.md  e213 223.lean  e213 pure.lean  e213 runtime.lean  e213 scratch.lean  e213.lean  e213_automorphism.lean  e213_cayley.lean  e213_congruence.lean  e213_coupling.lean  (+13 more)
atoms/: CLAUDE.md  DRLT_ATOMIC_PROMPT.md  HANDOFF.md
axiom/: complete_formulation.md  coupling_constants_formal.md  derivation_catalog.md  final_formulation.md  foundations.md  from_one_axiom.md  ghost_sum_rule_26params.md
blueprints/: INDEX.md
book/: 01_question_and_discipline.md  02_number_tower.md  04_axis_discriminants.md  06_reading.md  README.md  atomic_physics.tex  compact_stars.tex  drlt_book_single.tex  hydrogen_error.tex  main.tex  rep_theoretic_uniqueness.tex  water_angle.tex  webb_dipole.tex  yang_mills_mass_gap.tex
books/: README.md
catalogs/: README.md  abstraction-candidates.md  atomic-integers.md  correspondence-surface.md  correspondences.md  cross-domain-identifications.md  derivation-breadth.md  falsifier-roster.md  falsifiers.md  internal-hubs.md  math-theorems.md  periodic-table.md  physics-constants.md  recursor-inventory.md
cosmic-structure/: CLAUDE.md  HANDOFF.md
cosmology/: CLAUDE.md  HANDOFF.md
critical-line/: CLAUDE.md  HANDOFF.md
discrete-harmonic/: CLAUDE.md  HANDOFF.md
drlt-elements/: CLAUDE.md  HANDOFF.md
experiments/: EXP_001_pipeline.py  EXP_002_bounce.py  EXP_003_evolution.py  EXP_004_fine_structure.py  EXP_004_force_1d.py  EXP_005_force_4d.py  EXP_005_galaxy_rotation.py  EXP_006_universe.py  EXP_007_cmb.py  EXP_007_particles.py  EXP_008_zero_point.py  EXP_009_fine_structure.py  EXP_009_precision_constants.py  EXP_010_galaxy_rotation.py  EXP_011_black_hole.py  EXP_011_block_universe.py  EXP_012_baryon_asymmetry.py  EXP_012_gravitational_waves.py  EXP_013_200bytes.py  EXP_013_entanglement.py  EXP_015_all_physics.py  EXP_015_simplex_spacetime.py  EXP_016_compact_stars.py  EXP_016_neutrino_mass.py  EXP_017_webb_dipole.py  EXP_017_yukawa_running.py  EXP_018_precision_constants.py  EXP_018_variational.py  EXP_019_c2_mixing.py  EXP_021_pachner_block.py  EXP_022_cosmic_history.py  EXP_022_hinge_opposite.py  EXP_023_mysteries.py  EXP_024_large_N_cosmos.py  EXP_025_baryon_asymmetry.py  EXP_026_cmb_spectrum.py  EXP_027_rank25.py  EXP_028_200bytes.py  EXP_028_rank_cascade.py  EXP_029_qcd_sqgp.py  (+87 more)
foundations/: CLAUDE.md  HANDOFF.md
gram-algebra/: CLAUDE.md  HANDOFF.md
rust-engine/: Cargo.toml  README.md  whitelist.toml
rust-engine/crates/app/: Cargo.toml
rust-engine/crates/app/src/: alpha_em.rs  alpha_em_so10_gram.rs  alpha_em_with_tail.rs  basel.rs  certificate.rs  gap_explorer.rs  lib.rs  simplex.rs  wallis.rs
rust-engine/crates/app/tests/: alpha_em_axioms.rs  binary_smoke.rs  binary_snapshots.rs
rust-engine/crates/firmware/: Cargo.toml
rust-engine/crates/firmware/src/: lens.rs  lib.rs
rust-engine/crates/firmware/src/raw/: internal.rs  mod.rs
rust-engine/crates/firmware/tests/: lens_axioms.rs  raw_axioms.rs
rust-engine/crates/hypervisor/: Cargo.toml
rust-engine/crates/hypervisor/src/: canonical.rs  chiral_k32.rs  lib.rs
rust-engine/crates/hypervisor/tests/: chiral_axioms.rs
rust-engine/crates/kernel/: Cargo.toml
rust-engine/crates/kernel/src/: compare.rs  lib.rs  rat.rs  term.rs
rust-engine/crates/kernel/src/normal_form/: monomial.rs  rules.rs
rust-engine/crates/kernel/tests/: compare_axioms.rs  normal_form_axioms.rs  rat_axioms.rs  term_axioms.rs
rust-engine/crates/lens/: Cargo.toml
rust-engine/crates/lens/src/: canonical.rs  chiral_k32.rs  k32_cycles.rs  k32_graph.rs  lib.rs
rust-engine/crates/lens/tests/: chiral_axioms.rs
rust-engine/crates/os/: Cargo.toml
rust-engine/crates/os/src/: arity.rs  atomicity.rs  canonical_part.rs  lib.rs
rust-engine/crates/os/tests/: arity_axioms.rs  atomicity_axioms.rs
rust-engine/crates/term/: Cargo.toml
rust-engine/crates/term/src/: compare.rs  lib.rs  rat.rs  term.rs
rust-engine/crates/term/src/normal_form/: mod.rs  rules.rs
rust-engine/crates/term/tests/: compare_axioms.rs  normal_form_axioms.rs  rat_axioms.rs  term_axioms.rs
rust-engine/crates/theory/: Cargo.toml
rust-engine/crates/theory/src/: atomicity.rs  lens.rs  lib.rs
rust-engine/crates/theory/src/atomicity/: canonical_part.rs
rust-engine/crates/theory/src/raw/: internal.rs  mod.rs
rust-engine/crates/theory/tests/: lens_axioms.rs  raw_axioms.rs
rust-engine/docs/: architecture.md  closure-algorithm.md  cohomology-classes.md  gaps-and-todos.md  layers.md  math-branch-physics-notes.md  milestones.md  precision-matrix.md  trust-contract.md
rust-engine/tools/lean-rust-diff/: Cargo.toml
rust-engine/tools/lean-rust-diff/src/: main.rs
rust-engine/tools/verify-citations/: Cargo.toml
rust-engine/tools/verify-citations/src/: main.rs
(+10154 files in other folders)
