[workspace]
resolver = "2"
members = [
    "crates/kernel",
    "crates/firmware",
    "crates/hypervisor",
    "crates/os",
    "crates/app",
    "tools/verify-citations",
    "tools/lean-rust-diff",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mingu Jeong"]
license = "MIT"
repository = "https://github.com/jmg2027/Dynamic-Resolution-Lattice-Theory-"

[workspace.dependencies]
# Numeric — only allowed external numeric crates in runtime.
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
# Tooling-only.
serde      = { version = "1",   features = ["derive"] }
toml       = "0.8"

[profile.release]
lto         = "fat"
codegen-units = 1
overflow-checks = true       # ℕ overflow is a bug, never silent wrap.

[profile.dev]
overflow-checks = true
