[package]
name = "drlt-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DRLT 213 App — Simplex, Basel, AlphaEM, magic numbers. Mirrors lean/E213/App/ + Physics/."

[[bin]]
name = "alpha-em-bracket"
path = "src/bin/alpha_em_bracket.rs"

[[bin]]
name = "gap-explorer"
path = "src/bin/gap_explorer.rs"

[[bin]]
name = "k32-inspect"
path = "src/bin/k32_inspect.rs"

[[bin]]
name = "alpha-em-decompose"
path = "src/bin/alpha_em_decompose.rs"

[[bin]]
name = "simplex-inventory"
path = "src/bin/simplex_inventory.rs"

[[bin]]
name = "impedance-search"
path = "src/bin/impedance_search.rs"

[[bin]]
name = "triple-coupling"
path = "src/bin/triple_coupling.rs"

[[bin]]
name = "overlap-series"
path = "src/bin/overlap_series.rs"

[[bin]]
name = "series-truncation"
path = "src/bin/series_truncation.rs"

[[bin]]
name = "cf-generator"
path = "src/bin/cf_generator.rs"

[[bin]]
name = "propagator-form"
path = "src/bin/propagator_form.rs"

[[bin]]
name = "finite-resonance"
path = "src/bin/finite_resonance.rs"

[[bin]]
name = "parity-check"
path = "src/bin/parity_check.rs"

[[bin]]
name = "mu-electron"
path = "src/bin/mu_electron.rs"

[[bin]]
name = "m-proton"
path = "src/bin/m_proton.rs"

[[bin]]
name = "magic-numbers"
path = "src/bin/magic_numbers.rs"

[[bin]]
name = "higgs-quartic"
path = "src/bin/higgs_quartic.rs"

[[bin]]
name = "m-tau-mu"
path = "src/bin/m_tau_mu.rs"

[[bin]]
name = "higgs-master"
path = "src/bin/higgs_master.rs"

[[bin]]
name = "master-catalog"
path = "src/bin/master_catalog.rs"

[[bin]]
name = "weinberg-angle"
path = "src/bin/weinberg_angle.rs"

[[bin]]
name = "hydrogen-atom"
path = "src/bin/hydrogen_atom.rs"

[[bin]]
name = "neutron-proton"
path = "src/bin/neutron_proton.rs"

[[bin]]
name = "neutrino-mixing"
path = "src/bin/neutrino_mixing.rs"

[[bin]]
name = "dark-energy"
path = "src/bin/dark_energy.rs"

[[bin]]
name = "wz-bosons"
path = "src/bin/wz_bosons.rs"

[[bin]]
name = "cabibbo-angle"
path = "src/bin/cabibbo_angle.rs"

[[bin]]
name = "generations"
path = "src/bin/generations.rs"

[[bin]]
name = "hierarchy-towers"
path = "src/bin/hierarchy_towers.rs"

[[bin]]
name = "theta-qcd"
path = "src/bin/theta_qcd.rs"

[[bin]]
name = "muon-lifetime"
path = "src/bin/muon_lifetime.rs"

[[bin]]
name = "ckm-wolfenstein"
path = "src/bin/ckm_wolfenstein.rs"

[dependencies]
drlt-kernel     = { path = "../kernel" }
drlt-firmware   = { path = "../firmware" }
drlt-hypervisor = { path = "../hypervisor" }
drlt-os         = { path = "../os" }
num-bigint      = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
float_arithmetic = "deny"
