[package]
name = "drlt-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DRLT 213 Kernel — Term, Compare, Pair, Rat, NormalForm. Mirrors lean/E213/Kernel/."

[dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
float_arithmetic = "deny"
