[package]
name = "drlt-os"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DRLT 213 OS — Atomicity, Pigeonhole, Analysis213 algorithms. Mirrors lean/E213/OS/ + Math/Analysis213/."

[dependencies]
drlt-kernel     = { path = "../kernel" }
drlt-firmware   = { path = "../firmware" }
drlt-hypervisor = { path = "../hypervisor" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
float_arithmetic = "deny"
